# visdom-ai-tracing-cli

./: .gitignore  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-binaries.yml  release-plz.yml
action/: action.yml
crates/tracevault-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/tracevault-cli/assets/gsd-extension/: extension-manifest.json  index.ts  package.json
crates/tracevault-cli/assets/opencode-plugin/: index.ts  package.json
crates/tracevault-cli/src/: agent.rs  api_client.rs  config.rs  context.rs  credentials.rs  lib.rs  main.rs  paths.rs  resolution.rs  session_state.rs  test_helpers.rs  user_default.rs  user_project_default.rs
crates/tracevault-cli/src/commands/: agent_policies.rs  check.rs  commit_push.rs  context.rs  flush.rs  init.rs  login.rs  mod.rs  (+11 more)
crates/tracevault-cli/tests/: codex_stream_test.rs  content_length_test.rs  context_test.rs  global_install_test.rs  gsd_stream_test.rs  init_test.rs  opencode_stream_test.rs  repo_switch_args_test.rs  resolve_project_test.rs  resolve_remote_test.rs  resolve_repo_test.rs  stream_event_project_test.rs  stream_test.rs  user_context_test.rs  worktree_capture_e2e.rs  worktree_check_filtering.rs  worktree_context_test.rs
crates/tracevault-protocol/: Cargo.toml  README.md
crates/tracevault-protocol/src/: streaming.rs
crates/tracevault-protocol/tests/: hooks_test.rs
crates/visdom-ai-tracing-protocol/: CHANGELOG.md  Cargo.toml
crates/visdom-ai-tracing-protocol/src/: hooks.rs  lib.rs  streaming.rs
crates/visdom-ai-tracing-protocol/tests/: streaming_test.rs
(+6 files in other folders)
